[package]
authors = [
  "Hunar Roop Kahlon <hunar.roop@gmail.com>"
]
description = "A minecraft data and resource pack language."
edition = "2021"
name = "mcl"
version = "0.0.0"

[dependencies]
clap = { version = "4.2.1", features = ["env", "derive", "wrap_help", "string"] }
env_logger = "0.10.0"
log = "0.4.17"
nom = "7.1.3"
serde = { version = "1.0.159", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }

